# G_work

./: .env.sample  .gitignore  Dockerfile  README.md  blog.json  clients.json  docker-compose.yml  env.sample  manage.py  message.json  pyproject.toml  readme.md  sending.json  users.json
CW_Django_Sending/: asgi.py  settings.py  urls.py  wsgi.py
appointment/: admin.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
appointment/migrations/: 0001_initial.py  0002_initial.py
appointment/templatetags/: appointment_filter.py
blog/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_initial.py
blog/templatetags/: media_filter.py
clients/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_initial.py
config/: settings.py  urls.py
doctors/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
doctors/migrations/: 0001_initial.py
message/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
message/migrations/: 0001_initial.py  0002_initial.py
message/templatetags/: message_filters.py
sending/: admin.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
sending/migrations/: 0001_initial.py  0002_initial.py
sending/templatetags/: custom_filters.py
service/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
service/migrations/: 0001_initial.py
static/css/: prising.css
users/: admin.py  backends.py  forms.py  models.py  tests.py  urls.py  views.py
(+42 files in other folders)
