[tool.poetry]
name = "cw-django-sending"
version = "0.1.0"
description = ""
authors = ["Alex Urapin <kulob1@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
psycopg2-binary = "^2.9.9"
pytz = "^2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
