[tool.poetry]
name = "cw-django-sending"
version = "0.1.0"
description = ""
authors = ["Alex Urapin <kulob1@mail.ru>"]
readme = "README.md"
packages = [
    { include = "config" },
    { include = "blog" },
    { include = "clients" },
    { include = "doctors" },
    { include = "sending" },
    { include = "message" },
    { include = "service" },
    { include = "appointment" },
    { include = "users" }
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.16"
psycopg2-binary = "^2.9.9"
pytz = "^2024.2"
celery = "^5.4.0"
django-celery-beat = "^2.7.0"
django-crontab = "^0.7.1"
pillow = "^11.0.0"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.0.0"}
register = "^0.1"
redis = "^5.2.0"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"
django-dirtyfields = "^1.9.5"
